--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Click on the planets and the sun to learn more!</h1>
+    <img src="solar_system.jpg" alt="Solar System" usemap="#solar_system_map">
+    
+    <map name="solar_system_map">
+        <!-- Circular areas for planets (coords: x, y, radius) -->
+        <area shape="circle" coords="100,150,20" href="https://en.wikipedia.org/wiki/Mercury" alt="Mercury">
+        <area shape="circle" coords="180,130,30" href="https://en.wikipedia.org/wiki/Venus" alt="Venus">
+        <area shape="circle" coords="250,200,40" href="https://en.wikipedia.org/wiki/Earth" alt="Earth">
+        <area shape="circle" coords="350,180,25" href="https://en.wikipedia.org/wiki/Mars" alt="Mars">
+        <area shape="circle" coords="500,150,70" href="https://en.wikipedia.org/wiki/Jupiter" alt="Jupiter">
+        <area shape="circle" coords="680,160,60" href="https://en.wikipedia.org/wiki/Saturn" alt="Saturn">
+        <area shape="circle" coords="850,180,40" href="https://en.wikipedia.org/wiki/Uranus" alt="Uranus">
+        <area shape="circle" coords="1000,170,35" href="https://en.wikipedia.org/wiki/Neptune" alt="Neptune">
+        <area shape="circle" coords="1150,150,15" href="https://en.wikipedia.org/wiki/Ceres_(dwarf_planet)" alt="Ceres">
+        <area shape="circle" coords="1250,120,10" href="https://en.wikipedia.org/wiki/Pluto" alt="Pluto">
+        <area shape="circle" coords="1330,140,18" href="https://en.wikipedia.org/wiki/Haumea" alt="Haumea">
+        
+        <!-- Rectangular area for the sun (coords: x1, y1, x2, y2) -->
+        <area shape="rect" coords="450,250,600,350" href="https://en.wikipedia.org/wiki/Sun" alt="Sun">
+    </map>
     <script type="text/javascript" src="./script.js">
 </script>
 
